templates/vertical-pod-autoscaler_template.yaml
---
# Source: vertical-pod-autoscaler/templates/admission-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-vertical-pod-autoscaler-admission-controller
  namespace: default
  labels:
    helm.sh/chart: vertical-pod-autoscaler-1.6.1
    app.kubernetes.io/name: vertical-pod-autoscaler
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.1.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-controller
    app.kubernetes.io/component-instance: release-name-admission-controller
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: http
    - name: http-metrics
      port: 8944
      targetPort: http-metrics
  selector:
    app.kubernetes.io/name: vertical-pod-autoscaler
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: admission-controller
---
# Source: vertical-pod-autoscaler/templates/admission-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-vertical-pod-autoscaler-admission-controller
  namespace: default
  labels:
    helm.sh/chart: vertical-pod-autoscaler-1.6.1
    app.kubernetes.io/name: vertical-pod-autoscaler
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.1.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-controller
    app.kubernetes.io/component-instance: release-name-admission-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vertical-pod-autoscaler
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: admission-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vertical-pod-autoscaler
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: admission-controller
    spec:
      serviceAccountName: release-name-vertical-pod-autoscaler-admission-controller
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: admission-controller
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          image: registry.k8s.io/autoscaling/vpa-admission-controller:1.1.1
          imagePullPolicy: IfNotPresent
          args:
            - --v=4
            - --port=8000
            - --address=:8944
            - --register-webhook=false
            - --client-ca-file=/etc/tls-certs/ca.crt
            - --tls-cert-file=/etc/tls-certs/tls.crt
            - --tls-private-key=/etc/tls-certs/tls.key
          ports:
            - name: http
              protocol: TCP
              containerPort: 8000
            - name: http-metrics
              protocol: TCP
              containerPort: 8944
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health-check
              port: http-metrics
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /health-check
              port: http-metrics
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/tls-certs
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: release-name-vertical-pod-autoscaler-admission-controller-cert
---
# Source: vertical-pod-autoscaler/templates/recommender/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-vertical-pod-autoscaler-recommender
  namespace: default
  labels:
    helm.sh/chart: vertical-pod-autoscaler-1.6.1
    app.kubernetes.io/name: vertical-pod-autoscaler
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.1.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: recommender
    app.kubernetes.io/component-instance: release-name-recommender
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vertical-pod-autoscaler
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: recommender
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vertical-pod-autoscaler
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: recommender
    spec:
      serviceAccountName: release-name-vertical-pod-autoscaler-recommender
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: recommender
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          image: registry.k8s.io/autoscaling/vpa-recommender:1.1.1
          imagePullPolicy: IfNotPresent
          args:
            - --v=4
            - --address=:8942
          ports:
            - name: http-metrics
              protocol: TCP
              containerPort: 8942
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health-check
              port: http-metrics
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /health-check
              port: http-metrics
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
# Source: vertical-pod-autoscaler/templates/updater/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-vertical-pod-autoscaler-updater
  namespace: default
  labels:
    helm.sh/chart: vertical-pod-autoscaler-1.6.1
    app.kubernetes.io/name: vertical-pod-autoscaler
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.1.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: updater
    app.kubernetes.io/component-instance: release-name-updater
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vertical-pod-autoscaler
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: updater
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vertical-pod-autoscaler
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: updater
    spec:
      serviceAccountName:  release-name-vertical-pod-autoscaler-updater
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: updater
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          image: registry.k8s.io/autoscaling/vpa-updater:1.1.1
          imagePullPolicy: IfNotPresent
          args:
            - --v=4
            - --address=:8943
          ports:
            - name: http-metrics
              protocol: TCP
              containerPort: 8943
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health-check
              port: http-metrics
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /health-check
              port: http-metrics
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
# Source: vertical-pod-autoscaler/templates/admission-controller/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: vpa-webhook-config
  labels:
    helm.sh/chart: vertical-pod-autoscaler-1.6.1
    app.kubernetes.io/name: vertical-pod-autoscaler
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.1.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-controller
    app.kubernetes.io/component-instance: release-name-admission-controller
webhooks:
  - name: vpa.k8s.io
    admissionReviewVersions:
      - v1
    failurePolicy: Ignore
    sideEffects: None
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURlakNDQW1LZ0F3SUJBZ0lSQVAvMjV2emx0VkNzTHhmQmswaHk5Nkl3RFFZSktvWklodmNOQVFFTEJRQXcKUnpGRk1FTUdBMVVFQXhNOGNtVnNaV0Z6WlMxdVlXMWxMWFpsY25ScFkyRnNMWEJ2WkMxaGRYUnZjMk5oYkdWeQpMV0ZrYldsemMybHZiaTFqYjI1MGNtOXNiR1Z5TFdOaE1CNFhEVEkwTURVeE5UQTVOVFl4TUZvWERUTTBNRFV4Ck16QTVOVFl4TUZvd1J6RkZNRU1HQTFVRUF4TThjbVZzWldGelpTMXVZVzFsTFhabGNuUnBZMkZzTFhCdlpDMWgKZFhSdmMyTmhiR1Z5TFdGa2JXbHpjMmx2YmkxamIyNTBjbTlzYkdWeUxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQgpBUUVGQUFPQ0FR [...]
      service:
        name: release-name-vertical-pod-autoscaler-admission-controller
        namespace: default
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["autoscaling.k8s.io"]
        apiVersions: ["*"]
        resources: ["verticalpodautoscalers"]
